src/parser/OctaveMatlabSyntaxParser.ts
// Generated from ./src/parser/OctaveMatlabSyntax.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { OctaveMatlabSyntaxListener } from "./OctaveMatlabSyntaxListener";
import { OctaveMatlabSyntaxVisitor } from "./OctaveMatlabSyntaxVisitor";


export class OctaveMatlabSyntaxParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly WS = 3;
	public static readonly COMMENT = 4;
	public static readonly INT = 5;
	public static readonly FLOAT = 6;
	public static readonly STRING = 7;
	public static readonly ID = 8;
	public static readonly OP_ADD = 9;
	public static readonly OP_SUB = 10;
	public static readonly OP_MUL = 11;
	public static readonly OP_DIV = 12;
	public static readonly OP_POWER = 13;
	public static readonly OP_TRANSPOSE = 14;
	public static readonly OP_ELEMENTWISE_MUL = 15;
	public static readonly OP_ELEMENTWISE_DIV = 16;
	public static readonly OP_ELEMENTWISE_POWER = 17;
	public static readonly OP_ELEMENTWISE_LEFT_DIV = 18;
	public static readonly OP_ELEMENTWISE_RIGHT_DIV = 19;
	public static readonly OP_ASSIGN = 20;
	public static readonly OP_EQUAL = 21;
	public static readonly OP_NOT_EQUAL = 22;
	public static readonly OP_LESS_THAN = 23;
	public static readonly OP_LESS_THAN_OR_EQUAL = 24;
	public static readonly OP_GREATER_THAN = 25;
	public static readonly OP_GREATER_THAN_OR_EQUAL = 26;
	public static readonly OP_AND = 27;
	public static readonly OP_OR = 28;
	public static readonly OP_NOT = 29;
	public static readonly OP_TILDE = 30;
	public static readonly OP_DOT = 31;
	public static readonly OP_COLON = 32;
	public static readonly OP_COMMA = 33;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_assignment_statement = 2;
	public static readonly RULE_expression_statement = 3;
	public static readonly RULE_expression = 4;
	public static readonly RULE_relational_expression = 5;
	public static readonly RULE_additive_expression = 6;
	public static readonly RULE_multiplicative_expression = 7;
	public static readonly RULE_power_expression = 8;
	public static readonly RULE_elementwise_expression = 9;
	public static readonly RULE_transpose_expression = 10;
	public static readonly RULE_simple_expression = 11;
	public static readonly RULE_variable = 12;
	public static readonly RULE_argument_list = 13;
	public static readonly RULE_relational_operator = 14;
	public static readonly RULE_additive_operator = 15;
	public static readonly RULE_multiplicative_operator = 16;
	public static readonly RULE_elementwise_operator = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "assignment_statement", "expression_statement", 
		"expression", "relational_expression", "additive_expression", "multiplicative_expression", 
		"power_expression", "elementwise_expression", "transpose_expression", 
		"simple_expression", "variable", "argument_list", "relational_operator", 
		"additive_operator", "multiplicative_operator", "elementwise_operator",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'('", "')'", undefined, undefined, undefined, undefined, undefined, 
		undefined, "'+'", "'-'", "'*'", "'/'", "'^'", "'''", "'.*'", undefined, 
		"'.^'", "'.\\'", undefined, "'='", "'=='", "'~='", "'<'", "'<='", "'>'", 
		"'>='", "'&'", "'|'", undefined, undefined, "'.'", "':'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "WS", "COMMENT", "INT", "FLOAT", "STRING", 
		"ID", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", "OP_POWER", "OP_TRANSPOSE", 
		"OP_ELEMENTWISE_MUL", "OP_ELEMENTWISE_DIV", "OP_ELEMENTWISE_POWER", "OP_ELEMENTWISE_LEFT_DIV", 
		"OP_ELEMENTWISE_RIGHT_DIV", "OP_ASSIGN", "OP_EQUAL", "OP_NOT_EQUAL", "OP_LESS_THAN", 
		"OP_LESS_THAN_OR_EQUAL", "OP_GREATER_THAN", "OP_GREATER_THAN_OR_EQUAL", 
		"OP_AND", "OP_OR", "OP_NOT", "OP_TILDE", "OP_DOT", "OP_COLON", "OP_COMMA",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(OctaveMatlabSyntaxParser._LITERAL_NAMES, OctaveMatlabSyntaxParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return OctaveMatlabSyntaxParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "OctaveMatlabSyntax.g4"; }

	// @Override
	public get ruleNames(): string[] { return OctaveMatlabSyntaxParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return OctaveMatlabSyntaxParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(OctaveMatlabSyntaxParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, OctaveMatlabSyntaxParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 36;
				this.statement();
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.T__0) | (1 << OctaveMatlabSyntaxParser.INT) | (1 << OctaveMatlabSyntaxParser.FLOAT) | (1 << OctaveMatlabSyntaxParser.STRING) | (1 << OctaveMatlabSyntaxParser.ID))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, OctaveMatlabSyntaxParser.RULE_statement);
		try {
			this.state = 43;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 41;
				this.assignment_statement();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 42;
				this.expression_statement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment_statement(): Assignment_statementContext {
		let _localctx: Assignment_statementContext = new Assignment_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, OctaveMatlabSyntaxParser.RULE_assignment_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this.variable();
			this.state = 46;
			this.match(OctaveMatlabSyntaxParser.OP_ASSIGN);
			this.state = 47;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression_statement(): Expression_statementContext {
		let _localctx: Expression_statementContext = new Expression_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, OctaveMatlabSyntaxParser.RULE_expression_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, OctaveMatlabSyntaxParser.RULE_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			this.relational_expression();
			this.state = 56;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === OctaveMatlabSyntaxParser.OP_OR) {
				{
				{
				this.state = 52;
				this.match(OctaveMatlabSyntaxParser.OP_OR);
				this.state = 53;
				this.relational_expression();
				}
				}
				this.state = 58;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public relational_expression(): Relational_expressionContext {
		let _localctx: Relational_expressionContext = new Relational_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, OctaveMatlabSyntaxParser.RULE_relational_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 59;
			this.additive_expression();
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.OP_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_NOT_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_LESS_THAN) | (1 << OctaveMatlabSyntaxParser.OP_LESS_THAN_OR_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_GREATER_THAN) | (1 << OctaveMatlabSyntaxParser.OP_GREATER_THAN_OR_EQUAL))) !== 0)) {
				{
				this.state = 60;
				this.relational_operator();
				this.state = 61;
				this.additive_expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public additive_expression(): Additive_expressionContext {
		let _localctx: Additive_expressionContext = new Additive_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, OctaveMatlabSyntaxParser.RULE_additive_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.multiplicative_expression();
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === OctaveMatlabSyntaxParser.OP_ADD || _la === OctaveMatlabSyntaxParser.OP_SUB) {
				{
				this.state = 66;
				this.additive_operator();
				this.state = 67;
				this.multiplicative_expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiplicative_expression(): Multiplicative_expressionContext {
		let _localctx: Multiplicative_expressionContext = new Multiplicative_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, OctaveMatlabSyntaxParser.RULE_multiplicative_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			this.power_expression();
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === OctaveMatlabSyntaxParser.OP_MUL || _la === OctaveMatlabSyntaxParser.OP_DIV) {
				{
				this.state = 72;
				this.multiplicative_operator();
				this.state = 73;
				this.power_expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public power_expression(): Power_expressionContext {
		let _localctx: Power_expressionContext = new Power_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, OctaveMatlabSyntaxParser.RULE_power_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 77;
			this.elementwise_expression();
			this.state = 80;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === OctaveMatlabSyntaxParser.OP_POWER) {
				{
				this.state = 78;
				this.match(OctaveMatlabSyntaxParser.OP_POWER);
				this.state = 79;
				this.elementwise_expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elementwise_expression(): Elementwise_expressionContext {
		let _localctx: Elementwise_expressionContext = new Elementwise_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, OctaveMatlabSyntaxParser.RULE_elementwise_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.transpose_expression();
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_MUL) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_DIV) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_POWER) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_LEFT_DIV) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_RIGHT_DIV))) !== 0)) {
				{
				this.state = 83;
				this.elementwise_operator();
				this.state = 84;
				this.transpose_expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public transpose_expression(): Transpose_expressionContext {
		let _localctx: Transpose_expressionContext = new Transpose_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, OctaveMatlabSyntaxParser.RULE_transpose_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this.simple_expression();
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === OctaveMatlabSyntaxParser.OP_TRANSPOSE) {
				{
				this.state = 89;
				this.match(OctaveMatlabSyntaxParser.OP_TRANSPOSE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public simple_expression(): Simple_expressionContext {
		let _localctx: Simple_expressionContext = new Simple_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, OctaveMatlabSyntaxParser.RULE_simple_expression);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case OctaveMatlabSyntaxParser.INT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 92;
				this.match(OctaveMatlabSyntaxParser.INT);
				}
				break;
			case OctaveMatlabSyntaxParser.FLOAT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 93;
				this.match(OctaveMatlabSyntaxParser.FLOAT);
				}
				break;
			case OctaveMatlabSyntaxParser.STRING:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 94;
				this.match(OctaveMatlabSyntaxParser.STRING);
				}
				break;
			case OctaveMatlabSyntaxParser.ID:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 95;
				this.variable();
				}
				break;
			case OctaveMatlabSyntaxParser.T__0:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 96;
				this.match(OctaveMatlabSyntaxParser.T__0);
				this.state = 97;
				this.expression();
				this.state = 98;
				this.match(OctaveMatlabSyntaxParser.T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variable(): VariableContext {
		let _localctx: VariableContext = new VariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, OctaveMatlabSyntaxParser.RULE_variable);
		let _la: number;
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				this.match(OctaveMatlabSyntaxParser.ID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 103;
				this.match(OctaveMatlabSyntaxParser.ID);
				this.state = 104;
				this.match(OctaveMatlabSyntaxParser.T__0);
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.T__0) | (1 << OctaveMatlabSyntaxParser.INT) | (1 << OctaveMatlabSyntaxParser.FLOAT) | (1 << OctaveMatlabSyntaxParser.STRING) | (1 << OctaveMatlabSyntaxParser.ID))) !== 0)) {
					{
					this.state = 105;
					this.argument_list();
					}
				}

				this.state = 108;
				this.match(OctaveMatlabSyntaxParser.T__1);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument_list(): Argument_listContext {
		let _localctx: Argument_listContext = new Argument_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, OctaveMatlabSyntaxParser.RULE_argument_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.expression();
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === OctaveMatlabSyntaxParser.OP_COMMA) {
				{
				{
				this.state = 112;
				this.match(OctaveMatlabSyntaxParser.OP_COMMA);
				this.state = 113;
				this.expression();
				}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public relational_operator(): Relational_operatorContext {
		let _localctx: Relational_operatorContext = new Relational_operatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, OctaveMatlabSyntaxParser.RULE_relational_operator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.OP_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_NOT_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_LESS_THAN) | (1 << OctaveMatlabSyntaxParser.OP_LESS_THAN_OR_EQUAL) | (1 << OctaveMatlabSyntaxParser.OP_GREATER_THAN) | (1 << OctaveMatlabSyntaxParser.OP_GREATER_THAN_OR_EQUAL))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public additive_operator(): Additive_operatorContext {
		let _localctx: Additive_operatorContext = new Additive_operatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, OctaveMatlabSyntaxParser.RULE_additive_operator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			_la = this._input.LA(1);
			if (!(_la === OctaveMatlabSyntaxParser.OP_ADD || _la === OctaveMatlabSyntaxParser.OP_SUB)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiplicative_operator(): Multiplicative_operatorContext {
		let _localctx: Multiplicative_operatorContext = new Multiplicative_operatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, OctaveMatlabSyntaxParser.RULE_multiplicative_operator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			_la = this._input.LA(1);
			if (!(_la === OctaveMatlabSyntaxParser.OP_MUL || _la === OctaveMatlabSyntaxParser.OP_DIV)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elementwise_operator(): Elementwise_operatorContext {
		let _localctx: Elementwise_operatorContext = new Elementwise_operatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, OctaveMatlabSyntaxParser.RULE_elementwise_operator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_MUL) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_DIV) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_POWER) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_LEFT_DIV) | (1 << OctaveMatlabSyntaxParser.OP_ELEMENTWISE_RIGHT_DIV))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!OctaveMatlabSyntaxParser.__ATN) {
			OctaveMatlabSyntaxParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(OctaveMatlabSyntaxParser._serializedATN));
		}

		return OctaveMatlabSyntaxParser.__ATN;
	}

}

export class ProgramContext extends ParserRuleContext {
	public statement(): StatementContext[];
	public statement(i: number): StatementContext;
	public statement(i?: number): StatementContext | StatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StatementContext);
		} else {
			return this.getRuleContext(i, StatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return OctaveMatlabSyntaxParser.RULE_program; }
	// @Override
	public enterRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.enterProgram) {
			listener.enterProgram(this);
		}
	}
	// @Override
	public exitRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.exitProgram) {
			listener.exitProgram(this);
		}
	}
	// @Override
	public accept<Result>(visitor: OctaveMatlabSyntaxVisitor<Result>): Result {
		if (visitor.visitProgram) {
			return visitor.visitProgram(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	public assignment_statement(): Assignment_statementContext | undefined {
		return this.tryGetRuleContext(0, Assignment_statementContext);
	}
	public expression_statement(): Expression_statementContext | undefined {
		return this.tryGetRuleContext(0, Expression_statementContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return OctaveMatlabSyntaxParser.RULE_statement; }
	// @Override
	public enterRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.enterStatement) {
			listener.enterStatement(this);
		}
	}
	// @Override
	public exitRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.exitStatement) {
			listener.exitStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: OctaveMatlabSyntaxVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Assignment_statementContext extends ParserRuleContext {
	public variable(): VariableContext {
		return this.getRuleContext(0, VariableContext);
	}
	public OP_ASSIGN(): TerminalNode { return this.getToken(OctaveMatlabSyntaxParser.OP_ASSIGN, 0); }
	public expression(): ExpressionContext {
		return this.getRuleContext(0, ExpressionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return OctaveMatlabSyntaxParser.RULE_assignment_statement; }
	// @Override
	public enterRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.enterAssignment_statement) {
			listener.enterAssignment_statement(this);
		}
	}
	// @Override
	public exitRule(listener: OctaveMatlabSyntaxListener): void {
		if (listener.exitAssignment_statement) {
			listener.exitAssignment_statement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: OctaveMatlabSyntaxVisitor<Result>): Result {
		if (visitor.visitAssignment_statement) {
			return visitor.visitAssignment_statement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

